--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar>
-    <span>SHORTS?</span>
-</mat-toolbar>
+<body>
+    
+
 
 <form class = "login-form" role="form" (ngSubmit)="login($event)" [formGroup] = "loginForm">
     <mat-form-field class = "input">
@@ -25,3 +25,4 @@
 
     <mat-checkbox>Sign Up</mat-checkbox>
 </form>
+</body>
