added signup component and troubleshooting

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,7 +1,5 @@
-<mat-toolbar>
-    <span>SHORTS?</span>
-</mat-toolbar>
-
+<body>
+<img src="assets/images/short.png">
 <form class = "login-form" role="form" (ngSubmit)="login($event)" [formGroup] = "loginForm">
     <mat-form-field class = "input">
         <input matInput formControlName="username" type="text" name="username" placeholder="Username">
@@ -37,3 +35,4 @@
     <button class="login-button" mat-raised-button [color]="loginForm.valid ? 'primary' : 'warn'" [disabled]="!loginForm.valid && !loginForm.touched">Sign Up</button>
 
 </form>
+</body>
