--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,28 +1,28 @@
 <body>
     
+    <img src="assets/images/short.png">
 
-
-<form class = "login-form" role="form" (ngSubmit)="login($event)" [formGroup] = "loginForm">
-    <mat-form-field class = "input">
-        <input matInput formControlName="username" type="text" name="username" placeholder="Username">
-        <mat-hint> Username must be between 3 and 16 characters </mat-hint>
-        <mat-error *ngIf="loginForm.controls.username.errors && (loginForm.controls.username.dirty || loginForm.controls.username.touched)">
-            Invalid username - must be between 3 and 16 Characters
-        </mat-error>
-    </mat-form-field>
-    <br>
-    <mat-form-field class="input">
-        <input matInput formControlName="password" [type]= "hide ? 'password' : 'text'" name = "password" placeholder = "Password">
-        <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label] = "'Hide password'" [attr.aria-pressed] = "hide">
-            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-        </button>
-            <mat-hint>Password must be between 8 and 128 characters</mat-hint>
-            <mat-error *ngIf="loginForm.controls.password.errors && (loginForm.controls.password.dirty || loginForm.controls.password.touched)">
-                Password must be 8 and 128 characters
+    <form class = "login-form" role="form" (ngSubmit)="login($event)" [formGroup] = "loginForm">
+        <mat-form-field class = "input">
+            <input matInput formControlName="username" type="text" name="username" placeholder="Username">
+            <mat-error *ngIf="loginForm.controls.username.errors && (loginForm.controls.username.dirty || loginForm.controls.username.touched)">
+                Invalid username - must be between 3 and 16 Characters
             </mat-error>
-    </mat-form-field>
-    <button class="login-button" mat-raised-button [color]="loginForm.valid ? 'primary' : 'warn'" [disabled]="!loginForm.valid && !loginForm.touched">Login</button>
+        </mat-form-field>
+        <br>
+        <mat-form-field class="input">
+            <input matInput formControlName="password" [type]= "hide ? 'password' : 'text'" name = "password" placeholder = "Password">
+            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label] = "'Hide password'" [attr.aria-pressed] = "hide">
+                <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
+                <mat-error *ngIf="loginForm.controls.password.errors && (loginForm.controls.password.dirty || loginForm.controls.password.touched)">
+                    Password must be 8 and 128 characters
+                </mat-error>
+        </mat-form-field>
+        <button class="login-button" mat-raised-button [color]="loginForm.valid ? 'primary' : 'warn'" [disabled]="!loginForm.valid && !loginForm.touched">Login</button>
 
-    <mat-checkbox>Sign Up</mat-checkbox>
-</form>
+        <a routerLink="/signup" class="login-button" mat-raised-button [color]="'primary'">Sign Up</a>
+    
+
+    </form>
 </body>
