sign up complete

--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,10 +1,10 @@
 <body>
 <img src="assets/images/short.png">
-<form class = "login-form" role="form" (ngSubmit)="login($event)" [formGroup] = "loginForm">
+<form class = "signup-form" role="form" (ngSubmit)="signup($event)" [formGroup] = "signupForm">
     <mat-form-field class = "input">
         <input matInput formControlName="username" type="text" name="username" placeholder="Username">
         <mat-hint> Username must be between 3 and 16 characters </mat-hint>
-        <mat-error *ngIf="loginForm.controls.username.errors && (loginForm.controls.username.dirty || loginForm.controls.username.touched)">
+        <mat-error *ngIf="signupForm.controls.username.errors && (signupForm.controls.username.dirty || signupForm.controls.username.touched)">
             Invalid username - must be between 3 and 16 Characters
         </mat-error>
     </mat-form-field>
@@ -15,24 +15,27 @@
             <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
         </button>
             <mat-hint>Password must be between 8 and 128 characters</mat-hint>
-            <mat-error *ngIf="loginForm.controls.password.errors && (loginForm.controls.password.dirty || loginForm.controls.password.touched)">
+            <mat-error *ngIf="signupForm.controls.password.errors && (signupForm.controls.password.dirty || signupForm.controls.password.touched)">
                 Password must be 8 and 128 characters
             </mat-error>
     </mat-form-field>
     <br>
+
     <mat-form-field class="input">
         <input matInput formControlName="password" [type]= "hide ? 'password' : 'text'" name = "password" placeholder = "Confirm Password">
         <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label] = "'Hide password'" [attr.aria-pressed] = "hide">
             <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
         </button>
-            <mat-error *ngIf="loginForm.controls.password.errors && (loginForm.controls.password.dirty || loginForm.controls.password.touched)">
+            <mat-error *ngIf="signupForm.controls.password.errors && (signup.controls.password.dirty || signupForm.controls.password.touched)">
                 Password must be 8 and 128 characters
             </mat-error>
 
             <input matInput placeholder="City" id="city">
     </mat-form-field>
 
-    <button class="login-button" mat-raised-button [color]="loginForm.valid ? 'primary' : 'warn'" [disabled]="!loginForm.valid && !loginForm.touched">Sign Up</button>
+    <button routerLink="/login" class="signup-button" mat-raised-button [color]="signupForm.valid ? 'primary' : 'warn'" [disabled]="!signup.valid && !signupForm.touched">Sign Up</button>
+
+    <a routerLink="/login" class="btn btn-link">Cancel</a>
 
 </form>
 </body>
