--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,3 +1,11 @@
 body {
     background-color: #434343;
 }
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25;
+    padding-top: 75px;
+    padding-bottom: 25px;
+}
