--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,5 +1,5 @@
 <body>
-    <h1>Hello {{ user }}</h1>
+    <h1>Hello</h1>
 
     <img [src]="temperature >= 283.15 ? './assets/images/shortyes.png' : './assets/images/shortno.png'">
 
