--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,6 +1,10 @@
 body {
     background-color: #434343;
 }
+h1 {
+    margin-top: 40px;
+    text-align: center;
+}
 img {
     display: block;
     margin-left: auto;
