--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,7 @@
 <body>
-    <h1>Hello</h1>
+    <h1>HELLO</h1>
 
     <img [src]="temperature >= 283.15 ? './assets/images/shortyes.png' : './assets/images/shortno.png'">
+
 
 </body>
