--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -1,8 +1,9 @@
 body {
     background-color: #434343;
+    color: white;
 }
 h1 {
-    margin-top: 40px;
+    padding-top: 50px;
     text-align: center;
 }
 img {
