added try again button

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -3,5 +3,7 @@
 
     <img [src]="temperature >= 283.15 ? './assets/images/shortyes.png' : './assets/images/shortno.png'">
 
+    <button routerLink="/login" mat-raised-button>Try Again</button>
+
 
 </body>
